--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@graphql-tools/graphql-file-loader": "^7.3.1",
     "@graphql-tools/load": "^7.4.0",
     "@graphql-tools/schema": "^8.3.0",
-    "apollo-server": "^2.19.0"
+    "apollo-server": "^2.19.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "prisma-client-lib": "^1.34.10"
   }
 }
